--- a/app/header.scss
+++ b/app/header.scss
@@ -59,8 +59,8 @@
 header{
     width: 100%;
     margin: auto;
-    border:1px solid rgb(77, 77, 77);
-    border-radius: 0 0px 20px 20px;
+    // border:1px solid rgb(77, 77, 77);
+    // border-radius: 0 0px 20px 20px;
     position: sticky;
     top: 0;
     z-index: 10;
@@ -71,23 +71,24 @@ header{
         justify-content: space-between;
         align-items: center;
         padding: 10px;
-        margin-left: 4%;
+        padding-top: 8px;
+        margin-left: 0.4%;
         h3{
-            font-size: 22px;
+            font-size: 20px;
             font-weight: 700;
             color:aliceblue;
         }
         div{
             display: flex;
             flex-direction: row;
-            margin-right: 2%;
+            margin-right: 0.4%;
 
             p{
                 color: #f2f2f2;
             }
             svg{
                 font-size: 40px;
-                margin: 0 5px;
+                margin: 0 0px;
                 fill: aliceblue;
                 padding: 10px;
                 cursor: pointer;
@@ -109,7 +110,7 @@ header{
     justify-content: space-between;
 
     >div{
-        margin: 0 5% 0 0;
+        margin: 0 1% 0 0;
         color: #f5f5f5;
         display: flex;
         :link{
@@ -120,7 +121,7 @@ header{
         
     }
     p{
-        padding-left: 5%;
+        // padding-left: 5%;
         font-size: 10px;
         font-weight: 700;
     }   
