Chage the height of the swiper.

--- a/app/globals.css
+++ b/app/globals.css
@@ -203,7 +203,9 @@ body {
 }
 .swiper-wrapper {
   padding-left: 18px;
+  height: 400px !important;
 }
+
 .swiper-button-next,
 .swiper-button-prev {
   background-color: rgba(31, 31, 31, 0.5);
