--- a/app/globals.css
+++ b/app/globals.css
@@ -197,9 +197,9 @@ body {
   align-items: center;
   /* background-color: #000000; */
 }
-.test .swiper-wrapper {
+/* .test .swiper-wrapper {
   height: 400px !important;
-}
+} */
 .swiper-part {
   margin-left: calc(35% - 40px);
 }
