--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
 
+@font-face {
+  font-family: 'GT America Extended Bold';
+  src: url('../public/fonts/GT-America-Extended-Bold-Trial.woff2') format('woff2');
+  font-weight: bold; /* Adjust based on your font’s weight if needed */
+  font-style: normal; /* Adjust if the font style is italic or oblique */
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -19,8 +25,9 @@
 }
 
 body {
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-family: Inter, Helvetica, sans-serif !important;
+  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+  /* font-family: Inter, Helvetica, sans-serif !important; */
+  font-family: 'GT America Extended Bold', sans-serif !important;
   color: #868484;
   background-color: #000000;
   margin: 0;
@@ -513,7 +520,7 @@ height: unset!important;
   transition: width 0.3s ease; /* Animation duration and easing */
 }
 .form-heading {
-  font-family: "Syncopate", sans-serif !important;
+  /* font-family: "Syncopate", sans-serif !important; */
   font-weight: 700;
   font-style: normal;
   font-size: 1.3rem;
