Remove the margin top.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,7 +104,7 @@ h1 {
 .slider-heading {
   // width: 90%;
   margin: auto;
-  margin-top: 50px;
+  // margin-top: 50px;
   display: flex;
   flex-direction: row;
   border-radius: 20px;
