Reverting the code.

--- a/app/globals.css
+++ b/app/globals.css
@@ -813,3 +813,8 @@ body {
     display:none;
   }
 }
+@media (min-width: 320px) and (max-width: 425px){
+  .container2{
+    height: 130vh;
+  }
+  }
