Making the banner to be displayed none on small screens.

--- a/app/globals.css
+++ b/app/globals.css
@@ -818,3 +818,8 @@ body {
     height: 130vh;
   }
   }
+  @media (min-width: 320px) and (max-width: 425px){
+    .banner-info{
+display: none;   
+ }
+    }
