--- a/app/globals.css
+++ b/app/globals.css
@@ -6,11 +6,13 @@
 
 @font-face {
   font-family: "GT America Extended Bold";
-  src: url("../public/fonts/GT-America-Extended-Bold-Trial.woff2")
-    format("woff2");
-  font-weight: bold; /* Adjust based on your font’s weight if needed */
-  font-style: normal; /* Adjust if the font style is italic or oblique */
+  src: url("../public/fonts/GT-America-Extended-Bold-Trial.woff2") format("woff2");
+  font-weight: bold;
+  /* Adjust based on your font’s weight if needed */
+  font-style: normal;
+  /* Adjust if the font style is italic or oblique */
 }
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -33,12 +35,16 @@ body {
   background-color: #0d0d0d;
   margin: 0;
   padding: 0;
+  
 }
+
 .header-nav {
   transition: background-color 0.3s ease;
+
   &.transparent {
     background-color: transparent;
   }
+
   &.scrolled {
     background-color: #0d0d0d;
   }
@@ -64,15 +70,18 @@ body {
   width: 100%;
   height: 100%;
 }
-.cart-num{
+
+.cart-num {
   line-height: unset;
   padding: 5px;
 }
+
 .mySwiper2 {
   margin: 30px 0 30px 10px;
   width: 100%;
   padding-left: 40px !important;
 }
+
 .item-image-box {
   /* margin-right: 50px; */
   height: 312px;
@@ -88,7 +97,7 @@ body {
   position: relative;
   overflow: visible;
 
-  > .swiper-button-prev {
+  >.swiper-button-prev {
     top: 50% !important;
   }
 }
@@ -127,7 +136,7 @@ body {
     overflow: hidden;
     border-radius: 30px;
 
-    > div {
+    >div {
       position: relative;
     }
 
@@ -201,9 +210,11 @@ body {
     }
   }
 }
-.swiper-button-disabled{
+
+.swiper-button-disabled {
   display: none !important;
 }
+
 /* .newClass {
   padding-left: 40px!important;
 } */
@@ -224,11 +235,13 @@ body {
   }
 } */
 .home {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
+
 .apni-class {
   overflow-x: hidden !important;
 }
+
 .swiper-slide {
   color: #f3f3f3;
   /* height: calc(100% / 3); */
@@ -238,21 +251,27 @@ body {
   align-items: center;
   /* background-color: #000000; */
 }
+
 /* .test .swiper-wrapper {
   height: 400px !important;
 } */
 .swiper-part {
   margin-left: calc(35% - 40px);
 }
+
 .swiper-wrapper {
   padding-left: 18px;
 }
+
 .test {
   height: unset !important;
 }
+.newClass:nth-child(2){
+  display: none !important;
+}
 .swiper-button-next,
 .swiper-button-prev {
-  background-color: rgba(31, 31, 31, 0.5);
+  background-color: #7f7f7f80;
   color: white;
   width: 40px;
   height: 40px;
@@ -264,15 +283,15 @@ body {
 .swiper-button-prev2 {
   width: 40px !important;
   height: 40px !important;
-  top: 50% !important;
+  top: 45% !important;
 }
 
 .swiper-button-prev {
   position: absolute;
-  left: 60px;
+  left: 15px;
   top: 50%;
 
-  > svg {
+  >svg {
     margin-left: 10px;
     font-size: 18px;
   }
@@ -290,11 +309,11 @@ body {
   }
 
   &:hover {
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgb(0, 0, 0);
     transition: all 0.5s;
     transform: scale(1.1);
 
-    > svg {
+    >svg {
       margin-left: 8px;
       transition: margin-left 0.5s;
     }
@@ -308,10 +327,10 @@ body {
 
 .swiper-button-next {
   position: absolute;
-  right: 60px;
-  top: 50%;
+  right: 15px;
+  top: 45%;
 
-  > svg {
+  >svg {
     margin-left: 11px;
     font-size: 18px;
   }
@@ -333,7 +352,7 @@ body {
     transition: all 0.5s;
     transform: scale(1.1);
 
-    > svg {
+    >svg {
       margin-left: 13px;
       transition: margin-left 0.5s;
     }
@@ -416,7 +435,7 @@ body {
     transition: all 0.5s;
     transform: scale(1.1);
 
-    > svg {
+    >svg {
       margin-left: 8px;
       transition: margin-left 0.5s;
     }
@@ -439,19 +458,23 @@ body {
     transition: width 0.5s;
   } */
 }
+
 .bgCover {
-  background: url("../assets/alphalete_white.svg");
+  /* background: url("../assets/alphalete_white.svg"); */
+  background: url("../assets/panga_white.svg");
   border: 1px solid rgb(77, 77, 77);
   /* display: flex; */
   /* justify-content: center; */
-  height: 200px;
+  height: 280px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
 }
+
 .footer-main {
   position: relative;
 }
+
 .imageSwiper .swiper-button-prev {
   left: -50px;
 
@@ -472,7 +495,7 @@ body {
     transition: all 0.5s;
     transform: scale(1.1);
 
-    > svg {
+    >svg {
       margin-left: 8px;
       transition: margin-left 0.5s;
     }
@@ -527,6 +550,7 @@ body {
     display: none !important;
   }
 }
+
 .links div a {
   font-weight: 400 !important;
   font-size: 12px;
@@ -535,19 +559,27 @@ body {
   text-decoration: none;
   color: hsl(0deg 0% 96% / 80%);
   position: relative;
-  max-width: fit-content; /* Ensure positioning context for ::after */
+  max-width: fit-content;
+  /* Ensure positioning context for ::after */
 }
 
 .links div a::after {
-  content: ""; /* Creates an empty pseudo-element */
+  content: "";
+  /* Creates an empty pseudo-element */
   position: absolute;
   left: 0;
-  bottom: 0; /* Position the line at the bottom of the <a> tag */
-  width: 0; /* Initial width is 0, so it's hidden */
-  height: 2px; /* Thickness of the underline */
-  background-color: white; /* Color of the underline */
-  transition: width 0.3s ease; /* Animation duration and easing */
+  bottom: 0;
+  /* Position the line at the bottom of the <a> tag */
+  width: 0;
+  /* Initial width is 0, so it's hidden */
+  height: 2px;
+  /* Thickness of the underline */
+  background-color: white;
+  /* Color of the underline */
+  transition: width 0.3s ease;
+  /* Animation duration and easing */
 }
+
 .form-heading {
   font-family: "Syncopate", sans-serif !important;
   font-weight: 700;
@@ -555,6 +587,7 @@ body {
   font-size: 1.3rem;
   /* color: ; */
 }
+
 .input-form {
   background-color: transparent;
   padding: 15px 5px;
@@ -569,15 +602,18 @@ body {
   color: white;
   width: 100%;
 }
+
 .copyRight .footer-last ul {
   list-style: disc;
   /* margin-left: 20px; */
 }
+
 .copyRight .footer-last ul li {
   font-size: 8px;
   font-weight: normal;
   /* margin-left: 10px; */
 }
+
 .bg-img {
   background-image: url("../assets/hero.jpg");
   background-size: cover;
@@ -586,9 +622,22 @@ body {
   height: 95vh;
   width: 100%;
   /* z-index: -100; */
-  top: -50px;
+  top: -84px;
   position: relative;
 }
+.header-nav {
+  transition: background-color 0.3s ease; 
+}
+
+.header-nav.transparent {
+  background-color: transparent;
+}
+
+.header-nav.scrolled {
+  background-color: black;
+  color: white; 
+}
+
 /* Footer Css */
 #footer {
   width: 100%;
@@ -605,7 +654,7 @@ body {
   /* padding-left: 70px;
   padding-right: 70px; */
 
-  > div {
+  >div {
     width: 60%;
     min-width: 200px;
     min-height: 250px;
@@ -614,6 +663,7 @@ body {
       padding: 15px 0;
       color: #fff;
     }
+
     a {
       font-weight: 400 !important;
       font-size: 11px;
@@ -621,18 +671,25 @@ body {
       text-decoration: none;
       color: hsl(0deg 0% 96% / 80%);
       position: relative;
-      max-width: fit-content; /* Ensure positioning context for ::after */
+      max-width: fit-content;
+      /* Ensure positioning context for ::after */
     }
 
     a::after {
-      content: ""; /* Creates an empty pseudo-element */
+      content: "";
+      /* Creates an empty pseudo-element */
       position: absolute;
       left: 0;
-      bottom: 0; /* Position the line at the bottom of the <a> tag */
-      width: 0; /* Initial width is 0, so it's hidden */
-      height: 2px; /* Thickness of the underline */
-      background-color: white; /* Color of the underline */
-      transition: width 0.3s ease; /* Animation duration and easing */
+      bottom: 0;
+      /* Position the line at the bottom of the <a> tag */
+      width: 0;
+      /* Initial width is 0, so it's hidden */
+      height: 2px;
+      /* Thickness of the underline */
+      background-color: white;
+      /* Color of the underline */
+      transition: width 0.3s ease;
+      /* Animation duration and easing */
     }
 
     a:hover::after {
@@ -687,7 +744,7 @@ body {
   align-items: center;
   gap: 15px;
 
-  span > p {
+  span>p {
     display: inline-block;
     cursor: pointer;
     color: #707070;
@@ -724,7 +781,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    > div {
+    >div {
       width: 70%;
       margin: 15px auto;
       border: 2px solid #575656;
@@ -759,32 +816,80 @@ body {
     }
   }
 }
-
+.sec-slider-headings{
+  margin-top: 50px;
+}
 @media screen and (max-width: 550px) {
-  .container > div {
+  .container>div {
     background-position: center center !important;
   }
 }
+
 @media screen and (max-width: 426px) {
-  .preFooter > div {
+  .preFooter>div {
     left: 25% !important;
   }
-  #footer > div h4 {
+
+  #footer>div h4 {
     padding-left: 25px;
   }
+
   .footer-div-h4 {
     padding-left: 0px !important;
   }
+
   .swiper-slide {
     /* Ensure Swiper slide has appropriate styling */
     display: flex !important;
-    justify-content: center !important;
+    /* justify-content: center !important; */
   }
 }
-@media screen and (min-width: 320px) and (max-width: 420px) {
+
+@media screen and (min-width: 320px) and (max-width: 426px) {
   .product-page-det-card {
     right: 10px !important;
     width: 280px;
+  }
+  .hero-img-content{
+    bottom: 0px;
+  }
+  .bg-img{
+    background-position-x: -111px!important;
+
+  }
+  .hero-img-content p{
+    font-size: 14px;
+    padding-bottom: 5px;
+  }
+  .hero-img-btn {
+    padding: 10px!important;
+    font-size: 10px;
+  }
+  .slider-heading{
+    margin-top: -30px!important;
+  }
+  .slider-heading h2 span{
+    font-size: 14px;
+  }
+  .slider-heading button{
+    width: 105px;
+    height: 33px;
+    font-size: 10px;
+  }
+  .bg-img{
+    height: 100vh;
+  }
+  .banner-info h1{
+    font-size: 14px !important;
+  }
+  .banner-info p{
+    font-size: 12px !important;
+  }
+  .slider-2-btn{
+    margin-top: 20px;
+  }
+  .left .grid {
+    padding: 20px 0px 20px 20px !important; 
   }
 }
 
@@ -794,34 +899,35 @@ body {
   gap: 15px;
   /* flex-wrap: wrap; */
 }
+
 .footer-last ul li {
   transition-duration: 0.15s;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0.7;
 }
+
 .footer-last ul li:hover {
   opacity: 1;
 }
+
 @media (min-width: 860px) and (max-width: 1140px) {
   #footer {
     justify-content: center;
   }
 }
-@media (max-width: 420px){
-  .example05  {
-    display:none;
+
+@media (max-width: 420px) {
+  .example05 {
+    display: none;
   }
 }
-@media (min-width: 320px) and (max-width: 425px){
-  .container2{
-    height: 130vh;
+@media screen and (min-width: 320px) and (max-width: 900px) {
+  .dropdown-container .right{
+    display: none;
   }
-  }
-  @media (min-width: 320px) and (max-width: 440px){
-    .banner-info{
-  display: none; 
- }.hero-btn-res{    
-  top: 57vh!important;
- }
-    }
+  .dropdown-container  .left{
+    width: 100%!important;
+  } 
+  
+}
