--- a/app/header.scss
+++ b/app/header.scss
@@ -66,13 +66,15 @@ header {
   position: sticky;
   top: 0;
   z-index: 60;
-  background-color: #02020200;
+  // background-color: #02020200;
+  background-color: transparent;
+  
 
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px;
+    padding: 0 8px;
     margin-left: 15px;
     h3 {
       font-size: 18px;
@@ -83,12 +85,19 @@ header {
     div {
       display: flex;
       flex-direction: row;
+      align-items: center;
       margin-right: 0.4%;
-
+      height: 50px;
+      
       p {
         color: #f2f2f2;
         line-height: 12px;
       }
+      div.dropdown-trigger{
+        color: #f2f2f2;
+        line-height: 12px;
+        
+        }
       svg {
         font-size: 40px;
         margin: 0 0px;
@@ -98,14 +107,116 @@ header {
         border-radius: 15px;
         &:hover {
           background-color: rgba($color: #9e9e9e, $alpha: 0.5);
+          
         }
       }
       .burger {
         display: none;
       }
     }
+    &:hover {
+      background-color: rgba(2, 2, 2, 1);
+    }
   }
 }
+
+        .dropdown-container {
+          display: flex;
+          background-color: rgba(2, 2, 2, 1);
+          width: 100%; /* Full screen width */
+          height: 55%; /* Full screen height if needed */
+          // border: 1px solid #f2f2f2;
+          // box-sizing: border-box; 
+        }
+        .header-links {
+          font-weight: 400 !important;
+          font-size: 12px;
+          display: block;
+          line-height: 24px;
+          text-decoration: none;
+          color: hsl(0deg 0% 96% / 80%);
+          position: relative;
+          max-width: fit-content;
+          padding-bottom: 5px;
+          /* Ensure positioning context for ::after */
+        }
+        
+        .header-links::after {
+          content: "";
+          /* Creates an empty pseudo-element */
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          /* Position the line at the bottom of the <a> tag */
+          width: 0;
+          /* Initial width is 0, so it's hidden */
+          height: 2px;
+          /* Thickness of the underline */
+          background-color: white;
+          /* Color of the underline */
+          transition: width 0.3s ease;
+          /* Animation duration and easing */
+        } 
+        .header-links:hover::after {
+          color: white;
+          margin-top: 20px;
+          width: 100%;
+        }  
+        .left, .right {
+          display: flex;
+          flex: 1; /* Each child covers equal space */
+        }
+        
+        .left {
+          background-color: rgba(2, 2, 2, 1);
+          .grid {
+            font-weight: 200;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            padding: 30px 30px 30px 55px;
+            .row {
+              display: flex;
+              flex-grow: inherit;
+              flex: 1;
+              row-gap: 15px;
+              flex-direction: column;
+              p {
+                line-height: 12px;
+                color: #f2f2f2c5;                
+              }
+              p.first {
+                padding-bottom: 5px;
+                color: #f2f2f2;                
+              }
+              // p:hover {
+              //   cursor: pointer;
+              //   color: #f2f2f2;   
+              //   transform: translateX(5px);      
+              //   transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+
+              // }
+            }
+          }
+        }
+        
+        .right {
+          background-color: rgba(2, 2, 2, 1);
+          .image-container {
+            display: flex;
+            justify-content: space-between; /* Space between images */
+            height: 100%;
+            width: 33%;
+            img {
+              width: 100%;
+              height: auto;
+              // aspect-ratio: 2 / 1;
+              border: 1px solid #000; /* Border around images */
+              box-sizing: border-box; /* Ensure border is included in width/height */
+            }
+          }
+        }
+        
 .preheader {
   width: 100%;
   padding: 10px 0 5px 0;
