--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,7 +109,7 @@ h1 {
   flex-direction: row;
   border-radius: 20px;
   justify-content: space-between;
-  margin-left: 4.7%;
+  margin-left: 20px;
   margin-right: 4%;
   h2 {
     margin-top: 5px;
@@ -127,18 +127,18 @@ h1 {
   }
 }
 .sliders {
-  > div {
-    &:first-of-type {
+  > div.slider-buttons {
+    // &:first-of-type {
       border: 1px solid rgb(114, 114, 114);
       border-radius: 15px;
-      // width: 217px;
-      // width: 135px;
+    //   // width: 217px;
+    //   // width: 135px;
       width: fit-content;
       margin-top: 10px;
       padding: 3px;
       display: flex;
       justify-content: space-between;
-    }
+    // }
     > span {
       display: inline-block;
       color: rgb(248, 248, 248);
@@ -304,9 +304,10 @@ h1 {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 50% 50%;
   height: 120vh;
-  grid-gap: 30px;
+  row-gap: 40px;
+  column-gap:  0px;
   margin-top: 20px;
-  margin: 50px 50px;
+  // padding-left: 50px;  
 
   > div {
     position: relative;
@@ -318,6 +319,7 @@ h1 {
     // border-radius: 16px;
     background-position: 0px -134px;
     background-repeat: no-repeat;
+    margin: 0 20px;
   }
 
   .item1 {
@@ -349,18 +351,20 @@ h1 {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 50% 50%;
   height: 120vh;
-  grid-gap: 30px;
+  grid-gap: 20px;
   margin-top: 20px;
   // width: 90%;
-  margin: 50px 50px;
+  margin: 50px 20px;
 
   > div {
     position: relative;
-    border: 1px solid black;
+    // border: 1px solid black;
     display: flex;
     // background-color: gray;
     align-items: center;
     justify-content: center;
+    background-position: center;
+    background-repeat: no-repeat;
     // border-radius: 16px;
   }
 
@@ -381,7 +385,7 @@ h1 {
 
     video {
       width: 100%;
-      height: 100%;
+      height: auto;
     }
   }
   .banner-info {
@@ -395,17 +399,16 @@ h1 {
   }
 }
 .slider-buttons {
-  margin: 10px 0 0 5%;
+  margin: 20px;
 }
 .txt-black {
   color: black !important;
 }
 .preFooter {
   position: relative;
-  height: 95vh;
-  margin-top: 50px;
+  // height: 95vh;
   // background-color: rgb(128, 129, 129);
-  margin: 50px 50px;
+  margin: 50px 20px;
   // border-radius: 16px;
   // width: 84%;
   // margin: auto;
@@ -447,6 +450,7 @@ h1 {
   .video-background {
     left: -50%;
     width: 183%;
+    margin-left: 20px;
   }
 }
 
@@ -483,17 +487,17 @@ h1 {
 }
 @media (min-width: 767px) and (max-width: 1130px) {
   .preFooter {
-    height: 64vh;
+    height:auto;
   }
 }
 @media (min-width: 500px) and (max-width: 760px) {
   .preFooter {
-    height: 75vh;
+    height:auto;
   }
 }
 @media (min-width: 320px) and (max-width: 500px) {
   .preFooter {
-    height: 48vh;
+    height:auto;
   }
   .preFooter > div {
     display: none;
