--- a/app/globals.css
+++ b/app/globals.css
@@ -847,8 +847,11 @@ body {
 
 @media screen and (min-width: 320px) and (max-width: 426px) {
   .product-page-det-card {
-    right: 10px !important;
-    width: 280px;
+    right: auto !important;
+    width: 100%;
+    top: 40%;
+    /* margin-left: 30px; */
+    margin-top: 10px;
   }
   .hero-img-content{
     bottom: 0px;
@@ -890,6 +893,12 @@ body {
   }
   .left .grid {
     padding: 20px 0px 20px 20px !important; 
+  }
+  .apni-class-main{
+    height: 110vh;
+  }
+  .apni-class{
+    height: 40% !important;
   }
 }
 
