--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,6 +100,41 @@ h1 {
     cursor: pointer;
   }
 }
+.big-item-image-box {
+  height: 387px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+
+  .item-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  .new {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: white;
+    color: rgb(82, 82, 82);
+    font-size: 10px;
+    border-radius: 3px;
+    padding: 0 2px;
+    //shadow
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+  .plus {
+    background-color: transparent;
+    color: black;
+    position: absolute;
+    bottom: 12px;
+    right: 15px;
+    cursor: pointer;
+  }
+}
 
 .slider-heading {
   // width: 90%;
@@ -256,6 +291,146 @@ h1 {
             background-color: rgb(73, 72, 72);
             color: rgb(163, 161, 161);
             border-radius: 50%;
+            cursor: pointer;
+          }
+        }
+        div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 13px;
+          border-radius: 4px;
+          padding: 6px;
+          margin: 0 4px;
+          margin-top: 3px;
+        }
+      }
+      .item-images {
+        opacity: 0;
+        height: 60px;
+        border: 1px solid rgb(61, 61, 61);
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        background-color: black;
+        border-radius: 8px;
+        width: 100%;
+        padding: 2px 5px;
+        transition: all 0.3s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        z-index: 8;
+
+        img {
+          width: 45px;
+          height: 100%;
+          border-radius: 5px;
+          margin: 0 4px;
+        }
+      }
+    }
+    .slider-big-item {
+      height: 470px;
+      width: 330px;
+
+      &:hover .item-images {
+        opacity: 1;
+        transition: all 0.3s;
+      }
+      &:hover .item-sizes-box {
+        opacity: 1;
+        transition: all 0.3s;
+      }
+      .item-info {
+        margin-top: 5px;
+        display: flex;
+        flex-direction: column;
+        height: 40px;
+        transition: all 0.3s;
+        position: relative;
+        cursor: pointer;
+        h5 {
+          font-size: 12px;
+          color: white;
+        }
+        p {
+          font-size: 10px;
+          &:last-of-type {
+            color: rgb(211, 211, 211);
+          }
+        }
+
+        &:hover .item-sizes {
+          opacity: 1;
+          transition: all 0.3s;
+        }
+        &:hover .hide {
+          opacity: 0;
+          transition: all 0.3s;
+        }
+      }
+      .item-sizes-box {
+        position: absolute;
+        opacity: 0;
+        width: 87%;
+        background-color: black;
+        border: 1px solid rgb(61, 61, 61);
+        border-radius: 8px;
+        padding: 10px;
+        top: -40px;
+        left: 15px;
+        height: 100px;
+        z-index: 6;
+
+        > div {
+          &:first-of-type {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 5px;
+            .plus {
+              cursor: pointer;
+              height: 17px;
+              width: 17px;
+              border-radius: 50%;
+              padding: 3px;
+              &:hover {
+                background-color: rgb(73, 73, 73) !important;
+              }
+            }
+          }
+        }
+        &:hover {
+          transform: translateY(-70px);
+        }
+      }
+      .item-sizes {
+        opacity: 1;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        // border: 1px solid gray ;
+        border-radius: 8px;
+        width: 100%;
+        padding:0 5px;
+        transition: all 0.3s;
+        p {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 13px;
+          border-radius: 4px;
+          padding: 6px;
+          margin: 0 4px;
+
+          &:hover {
+            background-color: rgb(73, 72, 72);
+            color: rgb(163, 161, 161);
+            border-radius: 50%;
+            cursor: pointer;
           }
         }
         div {
