Created some changes.

--- a/app/globals.css
+++ b/app/globals.css
@@ -912,6 +912,22 @@ body {
   .apni-class {
     height: 40% !important;
   }
+  .slider-big-item{
+    width: 250px!important;
+  }
+  .slider-item{
+    width: 250px!important;
+  }
+  .slider {
+    width: 250px !important;
+  }
+  .banner-3{
+    bottom: 75px !important;
+  }
+  .swiper-button-next{
+    top: 50%;
+    right: 35px;
+  }
 }
 
 
@@ -953,4 +969,12 @@ body {
     width: 100% !important;
   }
 
+}
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+  .left-side-product-page{
+    display: none;
+  }
+  .footer-links-sec, .footer2{
+    border: none!important;
+  }
 }
