--- a/app/header.scss
+++ b/app/header.scss
@@ -269,6 +269,82 @@ header {
   width: 50%;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: block; /* Initially hidden */
+}
+.popUp-container {
+  position: fixed;
+  height: 80%;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
+  display: block; /* Initially hidden */
+  z-index: 1000;
+}
+
+
+.sub-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px;
+}
+
+.left-col,
+.right-col {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.popUp-first {
+  padding-bottom: 5px;
+  color: #f2f2f2;   
+  font-size: 16px;
+}
+
+.pop-Up-header-links {
+  font-weight: 400 !important;
+  font-size: 12px;
+  display: block;
+  line-height: 24px;
+  text-decoration: none;
+  color: hsl(0deg 0% 96% / 80%);
+  position: relative;
+  max-width: fit-content;
+  // padding-bottom: 3px;
+  &:hover {
+    cursor: pointer;
+  }
+  /* Ensure positioning context for ::after */
+}
+
+.swipe-bar {
+  width: 50px;
+  height: 5px;
+  background-color: white;
+  margin: 15px auto;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+
+
 @media screen and (max-width: 1100px) {
   .preheader a {
     display: none;
@@ -290,8 +366,8 @@ header {
   .p {
     right: 19%;
   }
-  .example05 a {
-    display: none;
+  .example05 {
+    display: none!important;
   }
 }
 @media (max-width: 420px) {
