--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -474,34 +474,37 @@ h1 {
 }
 
 .container {
-  min-width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 50% 50%;
-  height: 120vh;
-  row-gap: 40px;
-  column-gap:  0px;
-  margin-top: 20px;
+  // min-width: 100%;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
+  // grid-template-rows: 50% 50%;
+  // height: 120vh;
+  // row-gap: 40px;
+  // column-gap:  0px;
+  // margin-top: 20px;
   // padding-left: 50px;  
 
-  > div {
-    position: relative;
-    // border: 1px solid black;
-    display: flex;
-    // background-color: gray;
-    align-items: center;
-    justify-content: center;
-    // border-radius: 16px;
-    background-position: 0px -134px;
-    background-repeat: no-repeat;
-    margin: 0 20px;
-  }
+  // > div {
+  //   position: relative;
+  //   // border: 1px solid black;
+  //   display: flex;
+  //   // background-color: gray;
+  //   align-items: center;
+  //   justify-content: center;
+  //   // border-radius: 16px;
+  //   background-position: 0px -134px;
+  //   background-repeat: no-repeat;
+  //   margin: 0 20px;
+  // }
 
-  .item1 {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
-  }
+  // .item1 {
+  //   grid-column: 1 / span 1;
+  //   grid-row: 1 / span 1;
+  // }
 
+  .aspect-define{
+    aspect-ratio: 4/5;
+  }
   .item2 {
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
@@ -607,17 +610,31 @@ h1 {
   }
 }
 @media screen and (max-width: 680px) {
+  // .container,
+  // .container2 {
+  //   height: 310vh;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: space-between;
+
+  //   > div {
+  //     width: 90%;
+  //     height: 100vh;
+  //   }
   .container,
   .container2 {
-    height: 310vh;
+    width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 6px;
     justify-content: space-between;
 
     > div {
-      width: 90%;
-      height: 100vh;
+      width: 100%;
+      aspect-ratio: 4/5;
     }
   }
 }
@@ -632,8 +649,8 @@ h1 {
 @media screen and (max-width: 600px) {
   .main-card-res {
     display: flex;
-    flex-direction: column-reverse;
-    overflow: scroll !important;
+    flex-direction: column;
+    // overflow: scroll !important;
   }
   .main-card-res-none {
     display: none;
@@ -643,8 +660,8 @@ h1 {
 @media screen and (max-width: 600px) {
   .main-card-res {
     display: flex;
-    flex-direction: column-reverse;
-    overflow: scroll !important;
+    flex-direction: column;
+    // overflow: scroll !important;
   }
   .main-card-res-none {
     display: none;
