--- a/app/header.scss
+++ b/app/header.scss
@@ -75,7 +75,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 8px;
-    margin-left: 15px;
+    padding-left: 25px;
+    margin-left: 0px !important;
     h3 {
       font-size: 18px;
       font-weight: 700;
