--- a/app/styles/swiper6.scss
+++ b/app/styles/swiper6.scss
@@ -4,7 +4,7 @@
       width: 100%;
       // height: 100%;
       & :hover {
-        cursor: grab;
+        cursor: pointer;
       }
       
     }
