--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -208,6 +208,7 @@ h1 {
         margin-top: 5px;
         display: flex;
         flex-direction: column;
+        align-items: start;
         height: 40px;
         transition: all 0.3s;
         position: relative;
