--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,12 +73,12 @@ h1 {
   border-radius: 20px;
   overflow: hidden;
 
-  .item-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
+  // .item-image {
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  //   z-index: -1;
+  // }
   .new {
     position: absolute;
     top: 10px;
@@ -208,20 +208,24 @@ h1 {
         margin-top: 5px;
         display: flex;
         flex-direction: column;
+        gap: 2px;
         align-items: start;
         height: 40px;
         transition: all 0.3s;
         position: relative;
         cursor: pointer;
         h5 {
-          font-size: 12px;
+          font-size: 10px;
           color: white;
+          text-align: start;
         }
         p {
-          font-size: 10px;
-          &:last-of-type {
+          font-size: 12px;
             color: rgb(211, 211, 211);
-          }
+            &:last-of-type {
+              font-size: 10px;
+              color: red
+            }
         }
 
         &:hover .item-sizes {
