--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,7 +21,7 @@
 
   &:hover {
     background-color: #c7c7c7;
-    color: rgb(0, 0, 0);
+    // color: rgb(0, 0, 0);
   }
 }
 h1 {
@@ -66,13 +66,14 @@ h1 {
   width: 120%;
 }
 .item-image-box {
-  height: 312px;
+  // height: 312px;
+  aspect-ratio: 4/5;
   width: 100%;
   background-color: rgb(255, 255, 255);
   position: relative;
-  border-radius: 20px;
+  // border-radius: 20px;
   overflow: hidden;
-
+  
   // .item-image {
   //   width: 100%;
   //   height: 100%;
@@ -97,71 +98,59 @@ h1 {
     position: absolute;
     bottom: 12px;
     right: 15px;
+    background-color: #f3ebeb;
+    padding: 2px;
+    border-radius: 50%;
     cursor: pointer;
-  }
-}
-.big-item-image-box {
-  height: 387px;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-  position: relative;
-  border-radius: 20px;
-  overflow: hidden;
-
-  .item-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-  .new {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: white;
-    color: rgb(82, 82, 82);
-    font-size: 10px;
-    border-radius: 3px;
-    padding: 0 2px;
-    //shadow
-    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  }
-  .plus {
-    background-color: transparent;
-    color: black;
-    position: absolute;
-    bottom: 12px;
-    right: 15px;
-    cursor: pointer;
+    &:hover {
+      background-color: rgb(248, 248, 248);
+    }
   }
 }
 
 .slider-heading {
   // width: 90%;
-  margin: auto;
+  // margin: auto;
   // margin-top: 50px;
   display: flex;
   flex-direction: row;
   border-radius: 20px;
   justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 4%;
+  // margin-left: 20px;
+  // margin-right: 4%;
+  padding: 22px 21px 0px 21px;
+  color:rgb(10, 10, 10);
   h2 {
     margin-top: 5px;
     font-size: 20px;
-    color: white;
+    // color: white;
   }
   span {
     font-size: 18px;
     display: block;
-    color: white;
   }
   button {
-    background-color: rgb(250, 250, 250);
-    color: black;
+    display: block;
+  background-color: black;
+  color: white;
+  padding: 7px 20px;
+  font-size: 11px;
+  // font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  //   Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 1px;
+  border-radius: 25px;
+  text-transform: uppercase;
+  margin: 10px 0;
+  height: 40px;
+  transition: all 0.5s ease;
+  &:hover{
+    cursor: pointer;
+    background-color: rgb(70, 62, 62);
   }
 }
+}
 .sliders {
+  color:rgb(10, 10, 10);
   > div.slider-buttons {
     // &:first-of-type {
       border: 1px solid rgb(114, 114, 114);
@@ -176,25 +165,31 @@ h1 {
     // }
     > span {
       display: inline-block;
-      color: rgb(248, 248, 248);
+      // color: rgb(248, 248, 248);
       font-size: 10px;
       border-radius: 15px;
-      padding: 3px 12px;
+      padding: 5px 12px;
       &:hover {
         cursor: pointer;
       }
     }
   }
   .slider-items {
+
     margin-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
+
     .slider-item {
-      height: 400px;
-      width: 230px;
+      // aspect-ratio: 7/12;
+      // max-height: 400px;
+      // width: 100%;
+      // width: 250px;
+      min-width: 250px;
+      max-width: 251px;
 
       &:hover .item-images {
         opacity: 1;
@@ -202,7 +197,7 @@ h1 {
       }
       &:hover .item-sizes-box {
         opacity: 1;
-        transition: all 0.3s;
+        transition: all 0.7s;
       }
       .item-info {
         margin-top: 5px;
@@ -210,39 +205,41 @@ h1 {
         flex-direction: column;
         gap: 2px;
         align-items: start;
-        height: 40px;
+        // height: 40px;
         transition: all 0.3s;
         position: relative;
+        color: rgb(10, 10, 10);
         cursor: pointer;
         h5 {
-          font-size: 10px;
-          color: white;
+          font-size: 11px;
           text-align: start;
         }
         p {
           font-size: 12px;
-            color: rgb(211, 211, 211);
-            &:last-of-type {
-              font-size: 10px;
-              color: red
-            }
+        }
+        p.bg-gradient {
+          padding: 2px 5px;
+          background: linear-gradient(90deg, #3dbfff, #a649ff);
+          border-radius: 5px;
+          font-size: 10px;
+          text-align: center;
         }
 
         &:hover .item-sizes {
           opacity: 1;
-          transition: all 0.3s;
+          transition: transform 0.7s;
         }
         &:hover .hide {
           opacity: 0;
-          transition: all 0.3s;
+          transition: all 0.7s;
         }
       }
       .item-sizes-box {
         position: absolute;
         opacity: 0;
         width: 87%;
-        background-color: black;
-        border: 1px solid rgb(61, 61, 61);
+        background-color: white;
+        // border: 1px solid rgb(61, 61, 61);
         border-radius: 8px;
         padding: 10px;
         top: -40px;
@@ -254,17 +251,34 @@ h1 {
           &:first-of-type {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin-bottom: 5px;
-            .plus {
-              cursor: pointer;
-              height: 17px;
-              width: 17px;
-              border-radius: 50%;
-              padding: 3px;
+            button {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              font-size: 13px;
+              border-radius: 4px;
+              padding: 6px;
+              margin: 0 4px;
+    
               &:hover {
-                background-color: rgb(73, 73, 73) !important;
+                background-color: rgb(238 238 238);
+                color: rgb(10,10,10);
+                border-radius: 50%;
+                cursor: pointer;
               }
             }
+            // .plus {
+            //   cursor: pointer;
+            //   height: 17px;
+            //   width: 17px;
+            //   border-radius: 50%;
+            //   padding: 3px;
+            //   &:hover {
+            //     background-color: rgb(238 238 238) !important;
+            //   }
+            // }
           }
         }
         &:hover {
@@ -283,7 +297,7 @@ h1 {
         width: 100%;
         padding:0 5px;
         transition: all 0.3s;
-        p {
+        button {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -293,8 +307,8 @@ h1 {
           margin: 0 4px;
 
           &:hover {
-            background-color: rgb(73, 72, 72);
-            color: rgb(163, 161, 161);
+            background-color: rgb(238 238 238);
+            color: rgb(10,10,10);
             border-radius: 50%;
             cursor: pointer;
           }
@@ -312,17 +326,18 @@ h1 {
       }
       .item-images {
         opacity: 0;
-        height: 60px;
-        border: 1px solid rgb(61, 61, 61);
+        height: 67px;
+        // border: 1px solid rgb(61, 61, 61);
         position: absolute;
         top: 0px;
         left: 0px;
-        background-color: black;
+        background-color: white;
         border-radius: 8px;
         width: 100%;
-        padding: 2px 5px;
+        // padding: 2px 5px;
         transition: all 0.3s;
         display: flex;
+        gap: 2px;
         justify-content: center;
         align-items: center;
         overflow: hidden;
@@ -333,6 +348,7 @@ h1 {
           height: 100%;
           border-radius: 5px;
           margin: 0 4px;
+          background-color: #eeecec;
         }
       }
     }
@@ -355,16 +371,17 @@ h1 {
         height: 40px;
         transition: all 0.3s;
         position: relative;
+        color: rgb(10, 10, 10);
         cursor: pointer;
         h5 {
           font-size: 12px;
-          color: white;
+          // color: white;
         }
         p {
           font-size: 10px;
-          &:last-of-type {
-            color: rgb(211, 211, 211);
-          }
+          // &:last-of-type {
+          //   color: rgb(211, 211, 211);
+          // }
         }
 
         &:hover .item-sizes {
@@ -478,57 +495,57 @@ h1 {
   }
 }
 
-.container {
-  // min-width: 100%;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr;
-  // grid-template-rows: 50% 50%;
-  // height: 120vh;
-  // row-gap: 40px;
-  // column-gap:  0px;
-  // margin-top: 20px;
-  // padding-left: 50px;  
+// .container {
+//   min-width: 100%;
+//   display: grid;
+//   grid-template-columns: 1fr 1fr;
+//   grid-template-rows: 50% 50%;
+//   height: 120vh;
+//   row-gap: 40px;
+//   column-gap:  0px;
+//   margin-top: 20px;
+//   padding-left: 50px;  
 
-  // > div {
-  //   position: relative;
-  //   // border: 1px solid black;
-  //   display: flex;
-  //   // background-color: gray;
-  //   align-items: center;
-  //   justify-content: center;
-  //   // border-radius: 16px;
-  //   background-position: 0px -134px;
-  //   background-repeat: no-repeat;
-  //   margin: 0 20px;
-  // }
+//   > div {
+//     position: relative;
+//     // border: 1px solid black;
+//     display: flex;
+//     // background-color: gray;
+//     align-items: center;
+//     justify-content: center;
+//     // border-radius: 16px;
+//     background-position: 0px -134px;
+//     background-repeat: no-repeat;
+//     margin: 0 20px;
+//   }
 
-  // .item1 {
-  //   grid-column: 1 / span 1;
-  //   grid-row: 1 / span 1;
-  // }
+//   .item1 {
+//     grid-column: 1 / span 1;
+//     grid-row: 1 / span 1;
+//   }
 
-  .aspect-define{
-    aspect-ratio: 4/5;
-  }
-  .item2 {
-    grid-column: 1 / span 1;
-    grid-row: 2 / span 1;
-  }
+//   .aspect-define{
+//     aspect-ratio: 4/5;
+//   }
+//   .item2 {
+//     grid-column: 1 / span 1;
+//     grid-row: 2 / span 1;
+//   }
 
-  .item3 {
-    grid-column: 2 / span 2;
-    grid-row: 1 / span 2;
-  }
-  .banner-info {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    p {
-      font-size: 14px;
-      color: white;
-    }
-  }
-}
+//   .item3 {
+//     grid-column: 2 / span 2;
+//     grid-row: 1 / span 2;
+//   }
+//   .banner-info {
+//     position: absolute;
+//     bottom: 20px;
+//     left: 20px;
+//     p {
+//       font-size: 14px;
+//       color: white;
+//     }
+//   }
+// }
 .container2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
