--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   /* font-family: Inter, Helvetica, sans-serif !important; */
   font-family: "GT America Extended Bold", sans-serif !important;
   color: #868484;
-  background-color: #0d0d0d;
+  /* background-color: #0d0d0d; */
   margin: 0;
   padding: 0;
 }
@@ -50,13 +50,20 @@ body.no-scroll {
   transition: background-color 0.3s ease;
   position: fixed;
   top: 0;
+  color: #f2f2f2;
 
   &.transparent {
     background-color: transparent;
   }
 
   &.scrolled {
-    background-color: #0d0d0d;
+    background-color: #fcf9f9;
+    color: black
+  }
+
+  &:hover {
+    background-color: #fcf9f9;
+    color: black
   }
 }
 
@@ -84,15 +91,6 @@ body.no-scroll {
   padding-left: 40px !important;
 }
 
-.item-image-box {
-  /* margin-right: 50px; */
-  height: 312px;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-  position: relative;
-  border-radius: 12px !important;
-  overflow: hidden;
-}
 
 .mySwiper {
   width: 100%;
@@ -218,42 +216,20 @@ body.no-scroll {
   display: none !important;
 }
 
-/* .newClass {
-  padding-left: 40px!important;
-} */
-/* .mySwiper5 {
-  width: 90%;
-  margin: 60px auto;
-  height: fit-content;
-  overflow: scroll;
-  display: flex;
-  cursor: grab;
+.newClass {
+  padding-left: 40px !important;
+}
 
-  .swiper-slide {
-    color: #f3f3f3;
-    height: calc(100% / 3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-} */
+
 .home {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .apni-class {
   overflow-x: hidden !important;
 }
 
-.swiper-slide {
-  color: #f3f3f3;
-  /* height: calc(100% / 3); */
-  /* height: 100%; */
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  /* background-color: #000000; */
-}
+
 
 /* .test .swiper-wrapper {
   height: 400px !important;
@@ -466,14 +442,16 @@ body.no-scroll {
 
 .bgCover {
   /* background: url("../assets/alphalete_white.svg"); */
-  background: url("../assets/pang3a.png");
-  border: 1px solid rgb(77, 77, 77);
-  /* display: flex; */
-  /* justify-content: center; */
+  /* background: url("/assets/pang3aBlack.png"); */
+  /* border: 1px solid rgb(77, 77, 77); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 163px;
   height: 250px;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size: contain; */
 }
 
 .footer-main {
@@ -562,7 +540,7 @@ body.no-scroll {
   display: block;
   line-height: 24px;
   text-decoration: none;
-  color: hsl(0deg 0% 96% / 80%);
+  color: rgb(99, 99, 99);
   position: relative;
   max-width: fit-content;
   /* Ensure positioning context for ::after */
@@ -579,7 +557,7 @@ body.no-scroll {
   /* Initial width is 0, so it's hidden */
   height: 2px;
   /* Thickness of the underline */
-  background-color: white;
+  background-color: rgb(99, 99, 99);
   /* Color of the underline */
   transition: width 0.3s ease;
   /* Animation duration and easing */
@@ -636,18 +614,18 @@ body.no-scroll {
 }
 
 
-.header-nav {
+/* .header-nav {
   transition: background-color 0.3s ease;
-}
+} */
 
-.header-nav.transparent {
+/* .header-nav.transparent {
   background-color: transparent;
-}
+} */
 
-.header-nav.scrolled {
+/* .header-nav.scrolled {
   background-color: black;
   color: white;
-}
+} */
 
 /* Footer Css */
 #footer {
@@ -776,7 +754,7 @@ body.no-scroll {
   padding: 10px;
   font-size: 40px;
   background-color: transparent;
-  color: #ffffff;
+  color: rgb(10, 10, 10);
   border-radius: 18px;
   cursor: pointer;
 
@@ -857,17 +835,19 @@ body.no-scroll {
     /* justify-content: center !important; */
   }
 }
+
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .footer2{
-    border: none!important;
+  .footer2 {
+    border: none !important;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 375px) {
-  body{
-    width: 362px; 
+  body {
+    width: 362px;
   }
 }
+
 @media screen and (min-width: 320px) and (max-width: 426px) {
   .product-page-det-card {
     right: auto !important;
@@ -877,30 +857,20 @@ body.no-scroll {
     margin-top: 10px;
   }
 
-  .hero-img-content {
-    bottom: 0px;
-  }
 
   .bg-img {
     background-position-x: -111px !important;
 
   }
 
-  .hero-img-content p {
-    font-size: 14px;
-    padding-bottom: 5px;
-  }
 
   .hero-img-btn {
     padding: 10px !important;
     font-size: 12px;
   }
 
-  .slider-heading {
-    /* margin-top: -30px!important; */
-  }
 
-  .slider-heading h2 span {
+  /* .slider-heading h2 span {
     margin-top: 20px;
     font-size: 14px;
   }
@@ -909,7 +879,7 @@ body.no-scroll {
     width: 105px;
     height: 33px;
     font-size: 10px;
-  }
+  } */
 
   .bg-img {
     height: 100vh;
@@ -963,6 +933,7 @@ body.no-scroll {
 
 
 .footer-last ul {
+  color: #131212;
   display: flex;
   gap: 15px;
   /* flex-wrap: wrap; */
