--- a/app/styles/spinner.scss
+++ b/app/styles/spinner.scss
@@ -1,6 +1,7 @@
 .loader {
-    color: #fff;
+    color: #9e9c9c;
     font-size: 10px;
+    z-index: 1000;
     width: 1em;
     height: 1em;
     border-radius: 50%;
