--- a/app/header.scss
+++ b/app/header.scss
@@ -356,6 +356,10 @@ header {
     font-size: 80px;
     display: block !important;
     padding: 7px !important;
+    &.scrolled {
+      // background-color: black;
+      color: black !important;
+    }
   }
   .p {
     right: 19%;
